<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#90edeffd"
    android:padding="5dp"
    tools:context="com.MhMohamed.PillUp.FragmentAdd">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"


            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/mName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/MedicationLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/textview_medication"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/MedicationInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/hint_medication_name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mName"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/MedicationTLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/textview_type"
                    android:textSize="17dp" />


                <EditText
                    android:id="@+id/MedicationTInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"

                    android:hint="@string/hint_medication_type" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mType"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/MedicationDabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/textview_dosage"
                    android:textSize="17dp" />


                <EditText
                    android:id="@+id/MedicationDnput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"

                    android:hint="@string/hint_medication_dosage" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/mDosageTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mDosage"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:paddingEnd="5dp"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/dosageTimeLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/textview_dosage_time"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/dosageTimeInput"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"

                    android:hint="@string/hint_dosage_time" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/mDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/mDosageTime"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/mProduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mDosage"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/MedicationPDabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingTop="5dp"
                        android:text="@string/production_date"
                        android:textSize="17dp" />

                    <Button
                        android:id="@+id/setProductionDate"
                        android:layout_width="50dp"
                        android:layout_height="50dp"


                        android:background="@drawable/calender_icon" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0.5" />

                <LinearLayout
                    android:id="@+id/mExpiry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/mProduction"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/MedicationEDabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-condensed"
                        android:paddingTop="5dp"
                        android:text="@string/expiry_date"
                        android:textSize="17dp" />
                    <!--<View-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="0dp"-->
                    <!--android:layout_weight="0.5"-->
                    <!--/>-->

                    <Button
                        android:id="@+id/setExpiryDate"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/calender_icon" />

                </LinearLayout>

            </LinearLayout>


            <Button
                android:id="@+id/save"
                android:layout_width="120dp"
                android:layout_height="43dp"
                android:layout_below="@+id/mDate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="save"
                android:text="@string/button_save"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/save"
                android:layout_marginTop="20dp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</ScrollView>